<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include android:id="@+id/progress_layout"
                    layout="@layout/layout_progress_indicator">
                </include>

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progress"
                    android:padding="20dp"
                    android:scaleY="5"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
                    android:max="100"
                    android:progress="100"/>
                <!-- Primary Aggregator/Platform/Company Section -->
                <TextView
                    android:id="@+id/textViewCompanyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primary_aggregator_platform_company_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <Spinner
                    android:id="@+id/spinnerCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/company_names"
                    android:importantForAccessibility="yes"
                    android:contentDescription="@string/company_name_dropdown"
                    android:layout_marginBottom="16dp"/>

                <!-- Aggregator/Platform/Company Worker ID -->
                <TextView
                    android:id="@+id/textViewWorkerId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aggregator_platform_company_worker_id"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextWorkerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/worker_id"
                    android:maxLength="15"
                    android:inputType="text"
                    android:layout_marginBottom="16dp"/>

                <!-- Date Of Joining -->
                <TextView
                    android:id="@+id/textViewDateOfJoining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_joining"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextDateOfJoining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/enter_date_yyyy_mm_dd"
                    android:layout_marginBottom="16dp"/>

                <!-- Local Office Address -->
                <TextView
                    android:id="@+id/textViewOfficeAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_office_address_if_available"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextOfficeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_office_address"
                    android:inputType="text"
                    android:layout_marginBottom="16dp"/>
                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:id="@+id/prev"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:text="Previous"
                        android:layout_height="wrap_content" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/next"
                        android:text="Finish"
                        android:layout_margin="20dp"
                        android:layout_height="wrap_content">

                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:indeterminate="false"
                    android:visibility="gone"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:background="@drawable/circle_shape"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:progress="65" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</layout>
